--- a/MVC/Views/Employee/Index.cshtml
+++ b/MVC/Views/Employee/Index.cshtml
@@ -13,6 +13,10 @@
     </div>
 </div>
 
+<p>
+    <a href="@Url.Action("AddEmployee","Employee")" class="btn btn-default"><i class="fa fa-plus"></i> Add Employee</a>
+</p>
+
 <div id="employee_list_table">
     
 </div>
