--- a/MVC/Views/Employee/EditEmployee.cshtml
+++ b/MVC/Views/Employee/EditEmployee.cshtml
@@ -49,9 +49,7 @@
         </div>
 
         <div class="form-group">
-            <input type="submit" value="Submit" class="btn btn-primary" />
-            <input type="reset" value="Reset" class="btn btn-success" />
-
+            <input type="submit" value="Update" class="btn btn-primary" />
         </div>
     }
 </div>
